<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_50"
        android:background="@color/white"
        android:elevation="@dimen/dp_2"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dp_36"
            android:layout_height="@dimen/dp_46"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:paddingHorizontal="@dimen/dp_5"
            android:paddingVertical="@dimen/dp_10"
            android:src="@drawable/icon_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/color_333"
            android:textSize="@dimen/sp_20" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_category_label"
        android:layout_width="@dimen/dp_100"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/category"
        android:textColor="@color/color_333"
        android:textSize="@dimen/sp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tv_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/shape_radius6_transparent"
        android:hint="@string/hint_category"
        android:paddingHorizontal="@dimen/dp_5"
        android:paddingVertical="@dimen/dp_10"
        android:textColor="@color/color_333"
        android:textSize="@dimen/sp_18"
        app:layout_constraintBottom_toBottomOf="@+id/tv_category_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_category_label"
        app:layout_constraintTop_toTopOf="@+id/tv_category_label" />

    <TextView
        android:id="@+id/tv_date_label"
        android:layout_width="@dimen/dp_100"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/date"
        android:textColor="@color/color_333"
        android:textSize="@dimen/sp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_category_label" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/shape_radius6_transparent"
        android:hint="@string/hint_date"
        android:paddingHorizontal="@dimen/dp_5"
        android:paddingVertical="@dimen/dp_10"
        android:textColor="@color/color_333"
        android:textSize="@dimen/sp_18"
        app:layout_constraintBottom_toBottomOf="@+id/tv_date_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_date_label"
        app:layout_constraintTop_toTopOf="@+id/tv_date_label" />


    <TextView
        android:id="@+id/tv_amount_label"
        android:layout_width="@dimen/dp_100"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/amount"
        android:textColor="@color/color_333"
        android:textSize="@dimen/sp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_label" />

    <EditText
        android:id="@+id/et_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_20"
        android:autofillHints=""
        android:background="@drawable/shape_radius6_transparent"
        android:hint="@string/hint_amount"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/dp_5"
        android:paddingVertical="@dimen/dp_10"
        android:textColor="@color/color_333"
        android:textSize="@dimen/sp_18"
        app:layout_constraintBottom_toBottomOf="@+id/tv_amount_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_amount_label"
        app:layout_constraintTop_toTopOf="@+id/tv_amount_label" />


    <Button
        android:id="@+id/bt_sure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/shape_radius6_blue"
        android:text="@string/sure"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="@+id/et_amount"
        app:layout_constraintStart_toStartOf="@+id/tv_amount_label"
        app:layout_constraintTop_toBottomOf="@+id/et_amount" />

</androidx.constraintlayout.widget.ConstraintLayout>